--- a/src/index.css
+++ b/src/index.css
@@ -309,5 +309,10 @@ html {
     }
     
     .animate-pulse {
-      animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+      animation: pulse 8s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+    }
+
+    .register_shadow{
+      box-shadow: 0 0 50px black;
+      
     }
